--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   collection: ^1.15.0-nullsafety.4
   string_validator: ^0.3.0
   package_info_plus: ^1.4.2
+  http: ^0.13.4
 
 dev_dependencies:
   dependency_validator: ^3.1.2
